--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "po-packagr",
+  "name": "po-packager",
   "version": "1.0.0",
   "description": "A library for packaging page objects next to your own module.",
-  "main": "index.js",
+  "main": "cli/main.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "po-packager": "lib/cli.ts"
   },
   "author": "R.Rijnberk",
   "license": "MIT",
   "dependencies": {
+    "commander": "^2.15.0",
     "fs-extra": "^5.0.0",
     "glob": "^7.1.2",
     "rimraf": "^2.6.2",
